--- a/commit_config.json
+++ b/commit_config.json
@@ -1,5 +1,5 @@
 {
-    "repo_path": "C:\\Users\\hp\\Projects\\h4ck4thon\\pilox-backend-test",
+    "repo_path": "C:\\Users\\hp\\Projects\\h4ck4thon\\pilox-backend",
     "authors": [
       {"name": "Olamidipupo Favour", "email": "dipoagboola2019@gmail.com"},
       {"name": "Ada Lovelace", "email": "ada@example.com"},
